# rython

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/python-ast/: Cargo.toml
crates/python-ast/src/: lib.rs  macros.rs  parser_utils.rs  pyformat.rs  result.rs  traits.rs
crates/python-ast/src/ast/: node.rs
crates/python-ast/src/ast/dump/: mod.rs
crates/python-ast/src/ast/tree/: arguments.rs  assign.rs  async_for.rs  async_with.rs  attribute.rs  aug_assign.rs  await_kw.rs  bin_ops.rs  bool_ops.rs  call.rs  class_def.rs  compare.rs  constant.rs  dict.rs  expression.rs  f_string.rs  for_stmt.rs  function_def.rs  if_exp.rs  if_stmt.rs  import.rs  keyword.rs  lambda.rs  list.rs  list_comp.rs  mod.rs  module.rs  name.rs  named_expression.rs  raise_stmt.rs  scope.rs  set.rs  starred.rs  statement.rs  subscript.rs  try_stmt.rs  tuple.rs  unary_op.rs  while_stmt.rs  with_stmt.rs  (+1 more)
crates/python-ast/src/codegen/: mod.rs  python_options.rs
crates/python-ast/src/datamodel/: mod.rs
crates/python-ast/src/isidentifier/: mod.rs
crates/python-ast/src/parser/: mod.rs
crates/python-ast/tests/: codegen_semantics.rs  error_propagation.rs
crates/python-mod/: Cargo.toml  README.md
crates/python-mod/src/: empty_module.py  lib.rs  math_ops.py  minimal_test.py  simple_math.py  simple_math_with_preamble.py  string_ops.py
crates/python-mod/src/package_test/: __init__.py
crates/python-mod/tests/: README.md  documentation_tests.rs  edge_case_tests.rs  lib_tests.rs
crates/rypip/: Cargo.toml  README.md
crates/rypip/src/: convert.rs  lib.rs  main.rs  package.rs
crates/rypip/tests/: convert_tests.rs
crates/rythonc/: Cargo.toml
crates/rythonc/src/: main.rs
crates/stdpython/: Cargo.toml  README.md
crates/stdpython/examples/: generic_demo.rs
crates/stdpython/src/: lib.rs  python_signature.rs
crates/stdpython/src/stdlib/: argparse.rs  collections.rs  copy.rs  csv.rs  datetime.rs  functools.rs  glob.rs  hashlib.rs  heapq.rs  io.rs  itertools.rs  json.rs  math.rs  mod.rs  os.rs  pathlib.rs  random.rs  re.rs  string.rs  tempfile.rs  textwrap.rs  time.rs
crates/stdpython/tests/: integration_comprehensive.rs  integration_manual.rs  nostd_basic.rs  python_semantics.rs  timestamp_tz.rs
