[workspace]
resolver = "2"
members = [
    "crates/python-ast",
    "crates/python-mod",
    "crates/rypip",
    "crates/rythonc",
    "crates/stdpython",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rexlunae/rython"

[workspace.dependencies]
python-ast = { path = "crates/python-ast" }
python-mod = { path = "crates/python-mod" }
rythonc = { path = "crates/rythonc" }
stdpython = { path = "crates/stdpython" }
