[package]
name = "python-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A library for compiling Python to Rust"
documentation = "https://docs.rs/python-ast"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
pyo3 = {version = "0.25", features=["auto-initialize", "serde"]}
num-traits = "0.2"
num-derive = "0.4"
tracing = "0.1"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
litrs = "0.5.1"
encoding = "0.2.33"
to_tokenstream = "0.1.3"
proc-macro-error = "1.0.4"
serde = { version = "1.0.195", features = ["serde_derive", "derive", "rc"] }
pythonize = "0.25"
serde-pickle = "1.1.1"
thiserror = "2.0.12"
regex = "1.10"
anyhow = "1.0"
anyhow-tracing = "0.2"
