[package]
name = "python-mod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A macro library for including a Python module in Rust. At this point, very incomplete."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro-error2 = "2.0"
path_macro = "1.0"
python-ast.workspace = true
proc-macro2 = "1.0.76"
