[package]
name = "rypip"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A pip-like tool that builds Python packages as native Rust binaries and converts them into Rust crates, optionally with PyO3 bindings."

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
python-ast.workspace = true
quote = "1.0"
proc-macro2 = "1.0"
rust-format = "0.3"
toml = "0.8"
