[package]
name = "stdpython"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python standard library runtime for the Rython compiler ecosystem"

# Feature ladder (no_std-by-absence): core ⊂ alloc ⊂ std.
#   --no-default-features --features alloc  → #![no_std] + alloc (strings,
#     lists, dicts, exceptions — everything that doesn't touch the OS)
#   default ("std")                          → the full runtime
# A strictly-core tier (no alloc) is not implemented yet and fails loudly.
[features]
default = ["std"]
std = ["alloc", "dep:pyo3", "dep:libc", "dep:getrandom", "dep:regex", "indexmap/std"]
alloc = ["dep:hashbrown", "dep:libm", "dep:md-5", "dep:sha1", "dep:sha2"]

[dependencies]
pyo3 = {version = "0.29", features=["auto-initialize"], optional = true}
paste = "1.0"
indexmap = { version = "2", default-features = false }
getrandom = { version = "0.3", optional = true }
hashbrown = { version = "0.15", optional = true }
libm = { version = "0.2", optional = true }
regex = { version = "1", optional = true }
md-5 = { version = "0.10", optional = true, default-features = false }
sha1 = { version = "0.10", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
libc = { version = "0.2", optional = true }

[[bin]]
name = "comprehensive_rollout_summary"
required-features = ["std"]

# These suites pin OS-facing behavior (I/O, os.path, datetime, entropy…);
# nostd_basic.rs stays feature-agnostic and builds on every tier.
[[test]]
name = "python_semantics"
required-features = ["std"]

[[test]]
name = "timestamp_tz"
required-features = ["std"]

[[test]]
name = "integration_manual"
required-features = ["std"]

[[test]]
name = "integration_comprehensive"
required-features = ["std"]
